# Soward

./: .breakpoints  __selfrole.  afks.json  anti.json  antilinkconf.json  antimspconf.json  antispamconf.json  autoresponse.json  badges.json  blacklist.json  bot.py  config.json  config.py  database.json  friends.json  giveaways.json  main.py  mainbank.json  nonprefix.json  pinglimit.json  prefixes.json  pyproject.toml  randx.json  reactions.py  replit.nix  requirements.txt  role.json  roles.json  ui.py  verification.json  voice.db  whitelisted.json
cogs/: Automod.py  Colorcalc.py  Colorlist.py  Economy.py  Logging.py  Owner.py  Ticket2.py  Utility.py  VcRoles.py  adder.py  antiban.py  antibot.py  antichannel.py  antiemojid.py  antiemojiu.py  antiemostick.py  antiguild.py  antikick.py  antintregration.py  antinuke2.py  antinukec.py  antiprune.py  antirole.py  antiwebhook.py  autoblacklist.py  blackjack.py  calc.py  error.py  fun.py  fun2.py  fun4.py  fun5.py  fun6.py  fun_s.py  funop.py  games.py  games2.py  gamess.py  general.py  general2.py  (+21 more)
cogs/utils/: emoji.py  lister.py
core/: Soward.py
data/databases/: leveling.json  reaction_roles.json
ext/: config.json
helpers/: helpers.py
misc/: messages.py
otherscipts/: data.py
utilities/: Tools.py
views/: help.py
