[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
discord = ">=1.7.3"
pymongo = ">=3.12"
motor = ">=2.5.1"
aiohttp = ">=3.6.0"
jishaku = "^2.3.2"
requests = "^2.27.1"
psutil = "^5.9.0"
lavalink = "^3.1.5"
wavelink = "^1.2.4"
spotipy = "^2.19.0"
ffmpeg = "^1.4"
Counter = "^1.0.0"
google-api-python-client = "^2.47.0"
helper = "^2.5.0"
click = "^8.1.3"
validators = "^0.19.0"
humanfriendly = "^10.0"
Flask = "^2.1.2"
disputils = "^0.2.0"
httpx = "^0.23.0"
jdcloud-wsgi-wrapper = "^1.3"
termcolor = "^1.1.0"
aiofiles = "^0.8.0"
aiosqlite = "^0.17.0"
urbandictionary = "^1.1"
colorama = "^0.4.5"
lenny = "^0.1.3"
pytz = "^2022.2.1"
PyMySQL = "^1.0.2"
pygit2 = "^1.10.1"
ping3 = "^4.0.3"
numexpr = "^2.8.3"
python-decouple = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"